--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/luxplanjay/webpack-starter-kit.git"
+    "url": "git+https://github.com/DenisK0s/goit-js-hw-12-countries"
   },
   "keywords": [],
   "author": "Alexander Repeta <alexander.repeta@gmail.com>",
